# EventFramework

./: .gitignore  CMakeLists.txt  README.md
include/evt/: Event.h  EventHistory.h
include/evt/detail/: hashing.h
include/evt/interface/: EventFrameworkInterface.h
src/interface/: EventFrameworkInterface.cpp
tests/: test_Event.cpp  test_EventFrameworkInterface.cpp  test_EventHistory.cpp  test_MultiEventHandler.cpp  test_hashing.cpp
tests/support/: EventFrameworkInterface.h  Testing.h
